--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,3 +79,14 @@
     max-width: 100vw;
     max-height: 100vh;
   }
+
+  /* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
